--- a/styles.css
+++ b/styles.css
@@ -46,10 +46,10 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden; 
 }
 body{
     background-color: #f0f0f0;
+    overflow-y: scroll; 
 }
 .container {
     height: 100%;
@@ -109,7 +109,13 @@ label {
     font-family:'Roboto', sans-serif;
 }
 
-
+#qr_code {
+    position: absolute;
+    mix-blend-mode: multiply;
+    width: 100px;
+    top: 20px;
+    left: 20px;
+}
 
 
 /* Scrollbar */
